# into_v2

./: .gitignore  Dockerfile  README.en.md  README.md  alembic.ini  docker-compose.yml  mmm.py  prestart.sh  pyproject.toml  restart.sh  start.sh
alembic/: env.py
app/: __init__.py  backend_pre_start.py  celery_run.sh  celery_worker_did.sh  celery_worker_faucet.sh  flower_run.sh  main.py  run.sh
app/api/: __init__.py  deps.py
app/api/v1/: celerys.py  chat.py  faucet.py  group.py  group_members.py  groups.py  keys.py  open.py  proxy_coingecko.py  relations.py  relations_json.py  sms.py  tokens.py  twitter.py  users.py  users_extra.py  verificatons.py  versions.py  web.py
app/core/: celery_app.py  config.py  ecode.py  into_web3.py  security.py
app/core/abis/: IntoBind.json  (+3 more)
app/crud/: __init__.py  base.py  crud_faucet_bind.py  crud_group_members.py  crud_groups.py  crud_key.py  crud_pay_order.py  crud_relations.py  crud_relations_json.py  crud_user.py  crud_user_extra.py  crud_verifications.py  crud_versions.py  crud_web_project.py
app/db/: base.py  base_class.py  init_db.py  redis_db.py  session.py
app/models/: faucet_bind.py  groups.py  keys.py  relations.py  users.py  users_extra.py  verifications.py  versions.py  web_project.py
app/routes/: route.py
app/schemas/: __init__.py  faucet_bind.py  groups.py  keys.py  relations.py  users.py  users_extra.py  verifications.py  versions.py  web_project.py
app/settings/: .testing.env  sms_country_code.py  web3.py
app/src/: jwt_token.py
app/tools/: AESText.py  nike_name.py  secret_key.py  snow_id.py  utils.py
(+48 files in other folders)
